remove plex dependencies and use httpclient

--- a/client/src/app/settings/settings.component.html
+++ b/client/src/app/settings/settings.component.html
@@ -4,7 +4,7 @@
       <a>{{ tab.displayName }}</a>
     </li>
     <li [ngClass]="{ 'is-active': activeTab === 99 }" (click)="activeTab = 99">
-      <a>Speed Tests</a>
+      <a>Tests</a>
     </li>
   </ul>
 </div>
